concord_macros/tests/trybuild/fail/codegen/reserved_stream_unsupported.rs
use concord_macros::api;

api! {
    client ReservedStreamUnsupportedApi { base "https://example.com" }

    GET Download
        path ["download"]
        -> Stream<String>
}

fn main() {}
